complete website html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <ul class="navbar-nav ms-auto ">
             <li><a href="#"class="nav-link">signUp</a></li>
             <li><a href="#"class="nav-link">signIn</a></li>
+            <li><a href="#"class="nav-link"><i class="bi bi-wallet2"></i></a></li>
           </ul>
          </div>          
         </nav>
@@ -278,9 +279,120 @@
       </div>
     </div>
     </section>
-    <section id="icons">
-      
-    </section>
+   <section id="testinomials" >
+     <h6 class=""style="color: blue;">Hear from our customers</h6>
+     <h4 class="black p-4 ">Loved by businesses worldwide.</h4>
+     <h6 class="p grey" style="margin: 0% 20% 4%;">Our platform enables thousands of companies to run their cloud operations securely. They root for us, and they aren't shy about it.</h6>
+    <div class="container-fluid row g-3 ">
+      <div class="col-lg-3 container-fluid">
+        <div class="car p-3 flo-8">
+          "At Costco we are dedicated to providing exceptional customer experiences. With Wiz, we have the confidence to know we are quickly remediating issues to provide the best service to our customers."
+          <p>-Jon Raper</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+        <div class="car p-3 flo-4">
+          "Wiz is allowing us to scale the cybersecurity team's reach through technology."
+          <p>-Melody Hildebrandt</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+        <div class="car p-3 flo-5">
+          "We know that if Wiz identifies something as critical, it actually is."
+          <p>-Greg Poniatowski</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+        <div class="car p-3 flo-6">
+         "The instant, out-of-the box visibility and risk reduction Wiz provides make it one of the best security tools I've seen in a long time."
+         <p>-Emily Heath</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+        <div class="car p-3 flo-7">
+          "Within a few short minutes, we are able to obtain real-time information in order to identify, prioritize and respond to issues quickly."  
+          <p>-Yaron Slutzky</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid">
+        <div class="car p-3 flo-1" >
+          "Wiz is helping us recognize and understand risk faster. Now we can empower dev and cloud teams so they can be proactive in remediation activities."
+          <p>-Sagar Nayar</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+        <div class="car p-3 flo-2">
+          "I have not seen anything else right now that can give you as big of an impact as Wiz."
+          <p> -Igor Tsyganskiy</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+        <div class="car p-3 flo-3">
+          "I've been doing security for 24 years, and I've never had a security tool deploy faster than Wiz, let alone return this much value. The mean time to value was under a half hour."
+          <p>-Anthony Belfiore</p>
+        </div>
+      </div>
+      <div class="col-lg-3 container-fluid ">
+      <div class="car p-3 flo-9">
+          "Wiz is my eyes. Without it, I would be blind."
+        <p>-Omri Nachum</p>
+      </div>
+      </div>
+    </div>
+  </section>
+  <section id="pricing">
+
+    <div class="money  container ">
+      <div class="row g-4 inner-money">
+        <div class="col-lg-4 ">
+          <div class="money-1">
+            <h1 style="margin-bottom: 20%;">😲</h1>
+            <h1>Start Saving</h1>
+            <h1 class="grey">Your Money</h1>
+            <p class="grey">Choose a plan that works best for you, feel free to contact us if you need more detail for it </p>
+          </div>
+        </div>
+        <div class="col-lg-4 "> 
+          
+        <h1 class="grey price ">Pricings</h1>
+          <div class="money-2">
+            <h1>Basic</h1>
+            <h1>$499<span class="disabled">/website</span> </h1>
+            <p><i class="bi bi-clipboard-check-fill"> </i> Secure your account</p>
+            <p><i class="bi bi-clipboard-check-fill"> </i> 24x7 customer support</p>
+            <p><i class="bi bi-clipboard-check-fill"> </i> Tons of Design template</p>
+            <p><i class="bi bi-clipboard-check-fill"> </i> Full customization</p>
+            <a href=""><button class="btn btn-primary ">START NOW <i class="bi bi-arrow-right-circle-fill"></i> </button></a>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="money-3">
+            <h1>Advanced</h1>
+            <h1>$1499<span class="disabled">/website</span> </h1>
+            <p><i class="bi bi-clipboard-check-fill"> </i> Made by top professional</p>
+            <p><i class="bi bi-clipboard-check-fill"> </i> Powerfull traffic handleing</p>
+            <p><i class="bi bi-clipboard-check-fill"> </i> Tons of animation</p>
+            <p><i class="bi bi-clipboard-check-fill"> </i> e-commerce website</p>
+            <a href=""><button class="btn btn-light ">START NOW <i class="bi bi-arrow-right-circle"></i> </button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="relation">
+    <h1 style="font-weight: 900; font-size: 3.5rem;">We Make Relations Not Money</h1>
+    <p style="color: blue; ">To create a normal custom website with less money </p>
+    <p><a href="">click here <i class="bi bi-arrow-right-circle"> </i></a></p>
+  </section>
+  <section id="footer">
+    <div class="footer">
+      <i class="bi bi-twitter"></i>
+      <i class="bi bi-instagram"></i>
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-envelope"></i>
+      <p>© Copyright @adizio</p>
+    </div>
+  </section>
 
     <!-- JavaScript Bundle with Popper -->
     <script
