deleting the unwanted list item

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <p class="card-text">
               <ul>
                 <li>top editor will design</li>
-                <li>User friendly pages </li>
+                <li>User friendly pages.</li>
                 <li>custom color themes</li>
                 <li>Stock photographs, logo, illustration and icons</li>
               </ul>
@@ -252,7 +252,6 @@
             <p class="card-text">
               <ul>
                 <li>Selected template design</li>
-                <li>User friendly pages </li>
                 <li>custom color themes</li>
                 <li>Stock images & illustration</li>
               </ul>
@@ -268,7 +267,6 @@
             <p class="card-text">
               <ul>
                 <li>Your ideas and design</li>
-                <li>User friendly pages </li>
                 <li>Customer choice color theme </li>
                 <li>Customer given images and illustration</li>
               </ul>
