--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </div>
     </section>
-    <section id="features">
+    <section class="section--hidden" id="features">
       <h1 class="text-center fea grey">Features</h1>
       <div class="row features container-fluid text-center">
         <div class="col-lg-4">
@@ -119,7 +119,7 @@
         </div> -->
       </div>
     </section>
-    <section id="info">
+    <section class="section--hidden" id="info">
       <div class="row container-fluid info">
         <div class="col-lg-6 first-side">
           <h1 class="info-heading">Build Your Unique Online Presence</h1>
@@ -163,7 +163,7 @@
         </div>
       </div>
     </section>
-    <section id="built-tools">
+    <section class="section--hidden" id="built-tools">
       <div class="b-main black container-fluid">
         <p class="grey b-para">
           <span class="weight-600"
@@ -176,7 +176,7 @@
             online.
           </h1>
           <div class="b-left col-lg-6">
-            <img src="b-img-1.png" class="b-img" alt="" />
+            <img src="b-img-1.png" class="b-img blur" alt="" />
             <p class="dominating"><i class="bi bi-bag-dash-fill">Online Store </i></p>
             <p class="b-l-para">
               Start selling online and grow your business with a powerful
@@ -184,14 +184,14 @@
             </p>
           </div>
           <div class="b-right col-lg-6">
-            <img src="b-img-2.png" class="b-img" alt="" />
+            <img src="b-img-2.png" class="b-img blur" alt="" />
             <p class="dominating"> <i class="bi bi-calendar-event-fill">Online Shedudeling Software</i></p>
             <p class="b-l-para">
               Let clients book appointments or services and pay online.
             </p>
           </div>
           <div class="b-left col-lg-6">
-            <img src="b-img-3.png" class="b-img" alt="" />
+            <img src="b-img-3.png" class="b-img blur" alt="" />
             <p class="dominating"><i class="bi bi-person-circle">Persnal Vlog </i></p>
             <p class="b-l-para">
               Create a blog with built-in features to grow your reach and build
@@ -199,7 +199,7 @@
             </p>
           </div>
           <div class="b-right col-lg-6">
-            <img src="b-img-4.png" class="b-img" alt="" />
+            <img src="b-img-4.png" class="b-img blur" alt="" />
             <p class="dominating"> <i class="bi bi-plus-circle-fill">personalized logo</i></p>
             <p class="b-l-para">
               Request for you owm personalized logo our Team will create on
@@ -207,7 +207,7 @@
             </p>
           </div>
           <div class="b-left col-lg-6">
-            <img src="b-img-5.png" class="b-img" alt="" />
+            <img src="b-img-5.png" class="b-img blur" alt="" />
             <p class="dominating"><i class="bi bi-key-fill">Secure Environment </i></p>
             <p class="b-l-para">
               Run your Website freely in a secured environment with custom
@@ -215,7 +215,7 @@
             </p>
           </div>
           <div class="b-right col-lg-6">
-            <img src="b-img-6.png" class="b-img" alt="" />
+            <img src="b-img-6.png" class="b-img blur" alt="" />
             <p class="dominating"> <i class="bi bi-window-fullscreen">Total Design Freedom with Adizio Editor</i></p>
             <p class="b-l-para">
               Get a premium design of a webpage with freely as you want
@@ -224,7 +224,7 @@
         </div>
       </div>
     </section>
-    <section id="template">
+    <section class="section--hidden" id="template">
       <div class="temp">
       <div class="row container-fluid template">
         <h1 style="text-align: center; padding-bottom: 7%;" class="grey">Which style you want in your website</h1>
@@ -235,9 +235,9 @@
             <h5 class="card-title"></h5>
             <p class="card-text">
               <ul>
-                <li>top editor will design</li>
-                <li>User friendly pages.</li>
-                <li>custom color themes</li>
+                <li>Top editor will give perfect design</li>
+                <li>User friendly pages </li>
+                <li>Custom color themes</li>
                 <li>Stock photographs, logo, illustration and icons</li>
               </ul>
             </p>
@@ -252,7 +252,8 @@
             <p class="card-text">
               <ul>
                 <li>Selected template design</li>
-                <li>custom color themes</li>
+                <li>User friendly pages </li>
+                <li>Custom color themes</li>
                 <li>Stock images & illustration</li>
               </ul>
             </p>
@@ -267,6 +268,7 @@
             <p class="card-text">
               <ul>
                 <li>Your ideas and design</li>
+                <li>User friendly pages </li>
                 <li>Customer choice color theme </li>
                 <li>Customer given images and illustration</li>
               </ul>
@@ -277,7 +279,7 @@
       </div>
     </div>
     </section>
-   <section id="testinomials" >
+   <section class="section--hidden" id="testinomials" >
      <h6 class=""style="color: blue;">Hear from our customers</h6>
      <h4 class="black p-4 ">Loved by businesses worldwide.</h4>
      <h6 class="p grey" style="margin: 0% 20% 4%;">Our platform enables thousands of companies to run their cloud operations securely. They root for us, and they aren't shy about it.</h6>
@@ -338,7 +340,7 @@
       </div>
     </div>
   </section>
-  <section id="pricing">
+  <section class="section--hidden" id="pricing">
 
     <div class="money  container ">
       <div class="row g-4 inner-money">
@@ -382,7 +384,7 @@
     <p style="color: blue; ">To create a normal custom website with less money </p>
     <p><a href="">click here <i class="bi bi-arrow-right-circle"> </i></a></p>
   </section>
-  <section id="footer">
+  <section class="section--hidden" id="footer">
     <div class="footer">
       <i class="bi bi-twitter"></i>
       <i class="bi bi-instagram"></i>
@@ -398,5 +400,6 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
